login and logout successfully
